--- a/config/Jenkinsfile
+++ b/config/Jenkinsfile
@@ -23,10 +23,12 @@ node {
     stage('Run Service')
     {
         sh '''
-           TASK_FAMILY='first-run-task-defination'
-           TASK_REVISION=`/var/lib/jenkins/.local/bin/aws ecs describe-task-definition --task-definition myrepo | egrep 'revisio' | tr '/' ' ' | awk '{print $2}'  | sed 's/"$//' ` 
+           TASK_FAMILY='first-run-task-definition'
+           TASK_ID= 'aws ecs list-tasks --cluster default --desired-status RUNNING --family first-run-task-definition | egrep 'task' | tr '/' ' ' | awk '{print $2}' | sed 's/"$//''
+           TASK_REVISION='/var/lib/jenkins/.local/bin/aws ecs describe-task-definition --task-definition myrepo | egrep 'revisio' | tr '/' ' ' | awk '{print $2}'  | sed 's/"$//' ' 
            DESIRED_COUNT='1'
            SERVICE_NAME='ecs-myrepo-service'
+           
            echo `/var/lib/jenkins/.local/bin/aws ecs update-service --cluster default  --service ${SERVICE_NAME} --task-definition myrepo:${TASK_REVISION} --desired-count ${DESIRED_COUNT}`
         '''
     }
