--- a/config/Jenkinsfile
+++ b/config/Jenkinsfile
@@ -23,8 +23,8 @@ node {
     stage('Run Service')
     {
         sh '''
-           TASK_FAMILY='first-run-task-definition'
-           TASK_ID= 'aws ecs list-tasks --cluster default --desired-status RUNNING --family first-run-task-definition | egrep 'task' | tr '/' ' ' | awk '{print $2}' | sed 's/"$//''
+           TASK_FAMILY='first-run-task-defination'
+           TASK_ID= 'aws ecs list-tasks --cluster default --desired-status RUNNING | egrep 'task' | tr '/' ' ' | awk '{print $2}' | sed 's/"$//''
            TASK_REVISION='/var/lib/jenkins/.local/bin/aws ecs describe-task-definition --task-definition myrepo | egrep 'revisio' | tr '/' ' ' | awk '{print $2}'  | sed 's/"$//' ' 
            DESIRED_COUNT='1'
            SERVICE_NAME='ecs-myrepo-service'
