--- a/config/Jenkinsfile
+++ b/config/Jenkinsfile
@@ -1,6 +1,7 @@
 node {
     def SERVICE_NAME
     def TASK_FAMILY
+    def TASK_ID
     def TASK_REVISION
     def DESIRED_COUNT
     git url: 'https://github.com/Shalini1989/SpringMvcSecurity.git'
@@ -24,10 +25,11 @@ node {
     {
         sh '''
            TASK_FAMILY='first-run-task-defination'
-           TASK_ID= '/var/lib/jenkins/.local/bin/aws ecs list-tasks --cluster default --desired-status RUNNING'
+           TASK_ID='/var/lib/jenkins/.local/bin/aws ecs list-tasks --cluster default --desired-status RUNNING'
            TASK_REVISION='/var/lib/jenkins/.local/bin/aws ecs describe-task-definition --task-definition myrepo | egrep 'revisio' | tr '/' ' ' | awk '{print $2}'  | sed 's/"$//' ' 
            DESIRED_COUNT='1'
            SERVICE_NAME='ecs-myrepo-service'
+           
            
            echo `/var/lib/jenkins/.local/bin/aws ecs update-service --cluster default  --service ${SERVICE_NAME} --task-definition myrepo:${TASK_REVISION} --desired-count ${DESIRED_COUNT}`
         '''
