--- a/config/Jenkinsfile
+++ b/config/Jenkinsfile
@@ -3,7 +3,7 @@ node {
     def TASK_FAMILY
     def TASK_REVISION
     def DESIRED_COUNT
-    git url: 'https://github.com/Shalini1989/SpringMvcSecurity.git'
+    git url: 'https://github.com/debgmail/SpringMvcSecurity.git'
     stage('checkout'){  
        sh "rm -rf $WORKSPACE/*"	   
        checkout scm
@@ -24,11 +24,9 @@ node {
     {
         sh '''
            TASK_FAMILY='first-run-task-defination'
-           TASK_REVISION='/var/lib/jenkins/.local/bin/aws ecs describe-task-definition --task-definition myrepo | egrep 'revisio' | tr '/' ' ' | awk '{print $2}'  | sed 's/"$//' ' 
+           TASK_REVISION=`/var/lib/jenkins/.local/bin/aws ecs describe-task-definition --task-definition myrepo | egrep 'revisio' | tr '/' ' ' | awk '{print $2}'  | sed 's/"$//' ` 
            DESIRED_COUNT='1'
            SERVICE_NAME='ecs-myrepo-service'
-           
-           
            echo `/var/lib/jenkins/.local/bin/aws ecs update-service --cluster default  --service ${SERVICE_NAME} --task-definition myrepo:${TASK_REVISION} --desired-count ${DESIRED_COUNT}`
         '''
     }
